--- a/test_notebook_vae.ipynb
+++ b/test_notebook_vae.ipynb
@@ -14,7 +14,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from models import *\n",
-    "from kde_utils import *\n"
+    "from kde_utils import *"
    ]
   },
   {
