--- a/examples/cvae_demo.ipynb
+++ b/examples/cvae_demo.ipynb
@@ -20,8 +20,8 @@
     "sns.set()\n",
     "import pandas as pd\n",
     "\n",
-    "from data_enricher.models import *\n",
-    "from data_enricher.utils import *\n",
+    "from data_enricher.models.vae_models import *\n",
+    "from data_enricher.utils.vae_utils import *\n",
     "from data_enricher.comparison import *\n"
    ]
   },
